2021-12-16  Oliver Kiddle  <opk@zsh.org>

	* 49648 based on github #80 (Vincent Bernat):
	Completion/Unix/Command/_find, Completion/Zsh/Type/_globquals:
	invert before/since for date glob qualifiers completion

2021-12-14  Oliver Kiddle  <opk@zsh.org>

	* 49518: Src/Zle/computil.c, Etc/BUGS, Test/Y03arguments.ztst:
	fix exclusions for mixed - and + stacked options

2021-12-13  Oliver Kiddle  <opk@zsh.org>

	* 49646: Doc/Zsh/mod_watch.yo, Src/Modules/watch.c, Src/prompt.c:
	allow colors in WATCHFMT with %F/%K

	* 49645: Completion/Unix/Type/_path_commands: when completing for
	the path_dirs option, add a / suffix and follow symlinks

	* 49643: Completion/Zsh/Type/_command_names: facilitate use
	of the fake style by always calling _description with the
	executables tag

	* 49634, reported by Claes Nästén: configure.ac: revert 28989,
	defining _POSIX_C_SOURCE caused issues on Solaris 10 but
	doesn't seem to be needed for musl anymore

2021-12-07  Oliver Kiddle  <opk@zsh.org>

	* 49633: Completion/Unix/Command/_git: update options for git 2.34

2021-12-02  Oliver Kiddle  <opk@zsh.org>

	* 49630: Completion/bashcompinit: allow zsh to quote matches but
	include a special case for space suffixes

	* 49631: Completion/Unix/Command/_logger: new logger completion

	* 49629: Completion/Linux/Command/_perf: new Linux perf completion

2021-12-01  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 49628: Test/D01prompt.ztst: Add an xfail test for RPS1/RPROMPT
	equivalence.

	* 49624: Test/E03posix.ztst: Expect the test 'All identifiers
	are variable references in POSIX arithmetic' to pass, as it
	has been passing since 49611.

	* unposted: Doc/Zsh/zle.yo, Doc/ztexi.yo: Add whitespace and
	comments.  No functional change.

	* 49621: Doc/Zsh/manual.yo, Doc/Zsh/zle.yo: Fix the info Doc
	build, broken in 49448.

2021-11-30  Oliver Kiddle  <opk@zsh.org>

	* 49612: Src/module.c: avoid startup error with clashing non-local
	module parameter name
